# camera_module

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  camera_node_template.node.info.yaml  camera_node_template.node.yaml  compose.yaml  example.env  pyproject.toml
definitions/: camera_node_template.info.yaml  camera_node_template.node.info.yaml  camera_node_template.node.yaml  camera_template.node.yaml
scripts/: camera_rest_client.py
src/: __init__.py  camera_config.py  camera_interface.py  camera_rest_node.py
tests/: test_module.py  test_node.ipynb
tests/workcell_defs/: test_workcell.yaml
tests/workflow_defs/: test_workflow.yaml
